待解决：真机调试不识别pako解压缩

--- a/src/app.json
+++ b/src/app.json
@@ -1,8 +1,8 @@
 {
   "pages": [
     "pages/index/main",
-    "pages/logs/main",
-    "pages/monitorPlatform/multiCar/main"
+    "pages/monitorPlatform/multiCar/main",
+    "pages/logs/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -16,7 +16,13 @@
       "van-goods-action": "/static/vant/goods-action/index",
       "van-goods-action-icon": "/static/vant/goods-action-icon/index",
       "van-goods-action-button": "/static/vant/goods-action-button/index",
-      "van-field": "/static/vant/field/index"
+      "van-field": "/static/vant/field/index", 
+      "van-collapse": "/static/vant/collapse/index",
+      "van-collapse-item": "/static/vant/collapse-item/index",
+       "van-tab": "/static/vant/tab/index",
+       "van-tabs": "/static/vant/tabs/index",
+       "van-picker": "/static/vant/picker/index",
+       "van-datetime-picker": "/static/vant/datetime-picker/index"
   }
  
 }
